# PersonalServer

./: Cargo.toml
src/: LogBook - Flight_Times.csv  flight_hours.rs  lib.rs  live_server.rs  main.rs  tcp_message.rs  tui_app.rs
tests/: arc_mutex_test.rs  axum_push_test.rs
