[package]
name = "PersonalServer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
crossterm = "0.29.0"
csv = "1.4.0"
ratatui = "0.30.1"
ratatui-textarea = "0.9.1"
redis = "1.2.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
